# nanochatAquaRat

./: .env.template  3D_VIZ_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LAMBDA_MANUAL_SETUP.md  PRIME_INTELLECT_INTEGRATION.md  QUICKSTART_3D_VIZ.md  README.md  WANDB_3D_SHOWCASE.md  create_diagram_image.md  hyperbolic_training_report.md  instructions.txt  lambda_openapi.json  mermaid_alternative.md  pyproject.toml  read_block.py  render_diagram.py  requirements_3d_viz.txt  run_aquarat_lite.sh  run_aquarat_small.sh  test_aqua_extraction.py  test_inference.py  test_regex_extraction.py
configs/prime_rl/: default.toml  distributed.toml  full_dataset.toml  small_scale.toml
environments/nanochatAquaRat/: .env-metadata.json  README.md  nanochatAquaRat.py  pyproject.toml
examples/: showcase_3d_viz_example.py
hf_jobs/: README.md  bootstrap_and_train_base.sh  bootstrap_and_train_rl.sh  env.example  run_full_pipeline.sh  run_rl_job_example.sh
hf_release/: GCS_UPLOAD_GUIDE.md  QUICKSTART.md  README.md  launch_lambda.py
nanochat/: prime_intellect_integration.py  prime_rl_wandb.py  wandb_3d_viz.py
rustbpe/: Cargo.toml
scripts/: chat_eval.py  chat_rl.py  chat_sft.py  download_gcs_reports.ps1  download_gcs_reports.py  gcs_simple.py  launch_hyperbolic_training.py  launch_lambda_training.py  list_gcs_runs.py  mid_train.py  prepare_aqua.py  prime_rl_train.py  setup_prime_rl.sh  sft_train.py  simple_gcs_download.py  sync_hf_repo.py  tok_train.py  upload_to_gcs.sh
tasks/: aqua.py
wandb/run-20251025_073040-ujh4uagn/: run-ujh4uagn.wandb
(+145 files in other folders)
