[project]
name = "nanochatAquaRat"
description = "AQuA-RAT multiple-choice reasoning environment aligned with the nanochat RL pipeline"
tags = ["math", "reasoning", "multiple-choice", "rl"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.6.post0",
    "datasets>=2.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
